add admin view for users and users results